[gd_scene load_steps=17 format=3 uid="uid://dxnqj7dsgs2uo"]

[ext_resource type="Script" uid="uid://bxlmq7wkvypdm" path="res://Scripts/iceblock.gd" id="1_2dvdw"]
[ext_resource type="Texture2D" uid="uid://dsea83tbgtqu1" path="res://Assets/ice_emerge.png" id="2_53xjh"]
[ext_resource type="Texture2D" uid="uid://cu6h662epx62r" path="res://Assets/lazycube.png" id="3_53xjh"]
[ext_resource type="AudioStream" uid="uid://b6fmmicmjx0gq" path="res://Assets/icesfxnewgood.mp3" id="4_ddhm8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ddhm8"]
atlas = ExtResource("2_53xjh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccikw"]
atlas = ExtResource("2_53xjh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjdjj"]
atlas = ExtResource("2_53xjh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao2xf"]
atlas = ExtResource("2_53xjh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph71k"]
atlas = ExtResource("2_53xjh")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aitt8"]
atlas = ExtResource("2_53xjh")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5uvw"]
atlas = ExtResource("3_53xjh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rprqj"]
atlas = ExtResource("3_53xjh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5jdg"]
atlas = ExtResource("3_53xjh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_s5uvw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddhm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccikw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao2xf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph71k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aitt8")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5uvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rprqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5jdg")
}],
"loop": false,
"name": &"static",
"speed": 1.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ccikw"]
radius = 15.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wjdjj"]
radius = 16.0
height = 36.0

[node name="Iceblock" type="StaticBody2D"]
script = ExtResource("1_2dvdw")

[node name="Animation" type="AnimatedSprite2D" parent="."]
z_index = 7
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_s5uvw")
animation = &"static"
autoplay = "default"
frame = 2
frame_progress = 1.0

[node name="hitbox" type="CollisionShape2D" parent="."]
z_index = 3
position = Vector2(1, -3)
shape = SubResource("CircleShape2D_ccikw")
disabled = true

[node name="IcingZone" type="Area2D" parent="."]

[node name="icehitbox" type="CollisionShape2D" parent="IcingZone"]
z_index = 8
position = Vector2(1, -3)
shape = SubResource("CapsuleShape2D_wjdjj")

[node name="Melt" type="Timer" parent="."]

[node name="icesound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ddhm8")
volume_db = 1.759
bus = &"sfx"

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_finished"]
[connection signal="timeout" from="Melt" to="." method="_on_melt_timeout"]
